对DFT的基本公式进行了推导。

--- a/离散傅里叶变换1.md
+++ b/离散傅里叶变换1.md
@@ -1,7 +1,60 @@
-DFT
-这里在两个周期内采样40次
+## DFT
+[离散傅里叶变换零基础入门-中文1（针对工科生，无需连续傅立叶变换知识）](https://www.bilibili.com/video/BV1Tb41187i1/?spm_id_from=333.788.videocard.1)
+#### 问题
+现在我们有一组**未知信号的采样**，在两个周期内采样40次，得到结果。现在我们想要知道这组信号的**频率，振幅，相位**，该怎么做？
+
+为了解释这个问题，首先构造一组信号的离散采样。它表示这个信号在一个周期内振动了两次，一共采样了40次。Phase=0。
 $$
-X[k] = \Sigma_{n=0}^{39} \cos(2\pi \frac{2n}{40})\cos(2\pi \frac{kn}{40})
+x[n] = \cos(2\pi \frac{2n}{40}) \ \ \ \ \  n=0,1,2,...,39
+$$
+
+然后构造一组cos basis信号，分别在1个周期内振荡0，1，2，...，39次
+$$
+x[n] = \cos(2\pi \frac{0n}{40})
+$$
+
+$$
+x[n] = \cos(2\pi \frac{1n}{40})
+$$
+
+$$
+x[n] = \cos(2\pi \frac{2n}{40})
+$$
+
+$$
+...
+$$
+
+$$
+x[n] = \cos(2\pi \frac{39n}{40})
+$$
+
+
+
+$$
+X[2] = X[38] = 20
+$$
+
+然后我们将源信号与这40个cos basis信号挨个比较，看和谁长得最像。
+
+&nbsp;
+##### 比较方法：互相关函数，值越大，相关程度越高
+$$
+Correlation\ function:correlation(x,y) = \Sigma_{i=0}^Nx[i]y[i]
+$$
+
+发现当n=2，38的时候互相关程度最大，为20。
+$$
+\Sigma_{n=0}^{39} \cos(2\pi \frac{2n}{40})\cos(2\pi \frac{2n}{40}) = \Sigma_{n=0}^{39} \cos(2\pi \frac{2n}{40})\cos(2\pi \frac{38n}{40})=20 \tag{1}
+$$ 
+
+其他情况下互相关皆为0。
+$$
+\Sigma_{n=0}^{39} \cos(2\pi \frac{2n}{40})\cos(2\pi \frac{kn}{40}) = 0,when \ k \neq 2,38 
+$$ 
+&nbsp;
+$$
+X[k] = \Sigma_{n=0}^{39} \cos(2\pi \frac{2n}{40})\cos(2\pi \frac{kn}{40}) \tag{2}
 $$ 
 > $$X[k]表示源信号和第k+1个基信号的correlation$$
 >
@@ -11,8 +64,111 @@ $$
 
 
 &nbsp;
+对上面的式子做一些替换
 $$
-X[k] = \Sigma_{n=0}^{N-1}x[n]\cos(2\pi \frac{kn}{N})
+40 - 信号长度 - N
+$$
+
+$$
+\cos(2\pi \frac{2n}{40}) - 源信号 - x[n]
+$$
+得到
+$$
+X[k] = \Sigma_{n=0}^{N-1}x[n]\cos(2\pi \frac{kn}{N})     \tag{3}
 $$
 
 $$N:采样频率$$
+
+$$
+X[k]:第k+1个信号和源信号的互相关
+$$
+
+##### DFT Formula(注意这里$2\pi$之前有个负号)
+$$
+X[k] = \Sigma_{n=0}^{N-1} x[n]e^{-2\pi j \frac{kn}{N}}    \tag{4}
+$$
+
+DFT Formula **欧拉公式展开**，发现带cos的前半部分和式(3)是一样的，但是后面还有个复数量。
+$$
+X[k] = {\Sigma_{n=0}^{N-1} x[n] \cos(2\pi \frac{kn}{N})}  - j{\Sigma_{n=0}^{N-1} x[n] \sin(2\pi \frac{kn}{N})}    \tag{5}
+$$
+小小变换一下，有
+$$
+X[k] = {\Sigma_{n=0}^{N-1} x[n] \cos(2\pi \frac{kn}{N})}  + j{\Sigma_{n=0}^{N-1} x[n] (-\sin(2\pi \frac{kn}{N}))}    \tag{5.1}
+$$
+
+##### 为什么要使用复数？
+> 只是和cos basis比较的话，会失去phase信息。
+
+一个加上Phase shift的example，源信号左移$\frac{\pi}{3}$
+$$
+x[n] = \cos(2 \pi \frac{2n}{40} + \frac{\pi}{3})
+$$
+和把源信号变成原来的1/2
+$$
+x[n] = \frac{1}{2} \cos(2 \pi \frac{2n}{40})
+$$
+依然使用相同的一组基信号做互相关，发现两者的结果是一致的
+$$
+X[2] = X[8] =  {\Sigma_{n=0}^{39} x[2\ or\ 8] \cos(2\pi \frac{2n}{40}+ \frac{\pi}{3})} = 10
+$$
+
+$$
+X[0]=X[1]=X[3]=X[4]=...X[37]=X[39]=0
+$$
+只使用这个结果进行判断的话，不知道到底是相位偏移还是幅值减半。
+
+#####解决方法：再找一组sin basis，产生一组新数据。根据式$(5.1)$，这样就有：
+$$
+x_{sin}[n] = -\sin(2\pi \frac{kn}{40})\ \ \ n=0,1,2,...,39
+$$
+
+此时源信号与sin basis的correlation function为
+$$
+X_{sin}[k] = {\Sigma_{n=0}^{39} \cos(2\pi \frac{2n}{40}+ \frac{\pi}{3}) (-\sin(2\pi \frac{kn}{40}))}
+$$
+得到$k=2$时，互相关程度最大
+$$
+X_{sin}[2] = {\Sigma_{n=0}^{39} \cos(2\pi \frac{2n}{40}+ \frac{\pi}{3}) (-\sin(2\pi \frac{2n}{40}))} = 10\sqrt{3}
+$$
+
+另外$k=38$时，有
+$$
+ X_{sin}[38] = {\Sigma_{n=0}^{39} \cos(2\pi \frac{2n}{40}+ \frac{\pi}{3}) (-\sin(2\pi \frac{38n}{40}))} = -10\sqrt{3}
+$$
+*注：两者互为相反数，因为sin函数是基函数。*
+&nbsp;
+再加上源信号与cos basis的最大值
+$$
+  X_{cos}[2] = X_{cos}[38] = {\Sigma_{n=0}^{39} \cos(2\pi \frac{2n}{40}+ \frac{\pi}{3}) \cos(2\pi \frac{2n}{40})} = 10
+$$
+根据$(5.1)$，
+$$
+X[k] = {X_{cos}[k] } + j{X_{sin}[k]}    \tag{6}
+$$
+把它们写成一个复数的形式，则有
+$$
+X[2] = X_{cos}[2] + X_{sin}[2] = \Sigma_{n=0}^{39} x[n]e^{-2\pi j \frac{2n}{N}} = 10 + 10\sqrt{3}j
+$$
+
+$$
+X[38] = X_{cos}[38] + X_{38}[2] = \Sigma_{n=0}^{39} x[n]e^{-2\pi j \frac{38n}{N}} = 10 - 10\sqrt{3}j
+$$
+
+复数则承担了以一个紧密形式存储$X_{sin}$和$X_{cos}$的工具。
+$$
+Magnitude:\sqrt{10^2 + (10\sqrt{3})^2}
+$$
+
+$$
+Phase: arctan(\frac{10\sqrt{3}}{10})
+$$
+
+思考：为何$X_{cos}\ and\ X_{sin}$表示的是两组基信号和源信号的互相关，却能用于求出振幅和相位呢？
+数学背景较深，参考傅里叶分析。
+
+正弦函数和余弦函数是正交的，correlation程度可以看作是内积。
+$$\begin{aligned}
+f(x) &= a\sin(x) + b\cos(x) \\
+&= \sqrt{a^2 + b^2}c\cos(nx + \arctan(\frac{a}{b}))
+\end{aligned}$$
